chore: taon api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,8 @@
     "dist": true,
     "package-lock.json": true,
     "tmp-*": true,
+    "src/lib/env.browser.ts": true,
+    "src/lib/env.backend.ts": true,
     ".firedev": true,
     ".taon": true,
     ".tnp": true,
@@ -77,6 +79,8 @@
     "**/dist": true,
     "**/package-lock.json": true,
     "**/tmp-*": true,
+    "**/src/lib/env.browser.ts": true,
+    "**/src/lib/env.backend.ts": true,
     "**/.firedev": true,
     "**/.taon": true,
     "**/.tnp": true,
@@ -143,5 +147,13 @@
     "**/index.js": true,
     "**/index.d.ts": true,
     "**/index.js.map": true
+  },
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#b49a98",
+    "statusBar.background": "#258150",
+    "statusBar.debuggingBackground": "#15d8ff"
+  },
+  "files.watcherExclude": {
+    "local_release/**": true
   }
 }
