--- a/package.json
+++ b/package.json
@@ -156,10 +156,9 @@
     "detect-mocha": "0.1.0",
     "diff": "~4.0.2",
     "dockerode": "~4.0.5",
-    "electron": "25.2.0",
-    "electron-builder": "24.4.0",
+    "electron": "30.0.1",
+    "electron-builder": "~26.0.12",
     "electron-debug": "3.2.0",
-    "electron-reloader": "1.2.3",
     "element-resize-detector": "~1.2.4",
     "enquirer": "2.4.1",
     "enum-values": "1.2.1",
@@ -204,6 +203,7 @@
     "is-elevated": "~3.0.0",
     "isomorphic-region-loader": "~19.0.0",
     "istanbul-instrumenter-loader": "~3.0.1",
+    "javascript-obfuscator": "~4.1.1",
     "jest": "~29.7.0",
     "jest-date-mock": "~1.0.10",
     "jest-junit": "16.0.0",
@@ -310,6 +310,7 @@
     "taon-storage": "~19.0.0",
     "taon-type-sql": "~19.0.0",
     "taon-typeorm": "~19.0.0",
+    "taon-ui": "~19.0.2",
     "task.js": "^0.1.5",
     "threads": "1.7.0",
     "tnp": "~19.0.1",
@@ -331,6 +332,7 @@
     "typescript-class-helpers": "~19.0.0",
     "typescript-formatter": "~7.2.2",
     "typescript-string-enums": "^1.0.0",
+    "uglify-js": "~3.19.3",
     "underscore": "~1.13.7",
     "uuid": "~11.1.0",
     "validator": "~13.1.17",
@@ -342,6 +344,8 @@
     "webpack": "~5.80",
     "webpack-dev-middleware": "~6.1.3",
     "webpack-dev-server": "~5.0.4",
+    "yauzl": "~3.2.0",
+    "yazl": "~3.3.1",
     "yup": "~1.0.0-beta.8",
     "zone.js": "~0.13.0"
   },
