--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,8 +65,7 @@
     "dist": true,
     "package-lock.json": true,
     "tmp-*": true,
-    "src/lib/env.browser.ts": true,
-    "src/lib/env.backend.ts": true,
+    "src/lib/env/**/*.*": true,
     ".firedev": true,
     ".taon": true,
     ".tnp": true,
@@ -79,8 +78,7 @@
     "**/dist": true,
     "**/package-lock.json": true,
     "**/tmp-*": true,
-    "**/src/lib/env.browser.ts": true,
-    "**/src/lib/env.backend.ts": true,
+    "**/src/lib/env/**/*.*": true,
     "**/.firedev": true,
     "**/.taon": true,
     "**/.tnp": true,
