--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -16,6 +16,7 @@
     "ctcuff.font-preview",
     "dbaeumer.vscode-eslint",
     "dnicolson.binary-plist",
+    "eamodio.gitlens",
     "eg2.tslint",
     "esbenp.prettier-vscode",
     "henry-li.vscode-import-formatter",
@@ -46,8 +47,8 @@
     "taddison.gitlazy",
     "unifiedjs.vscode-mdx",
     "tommasov.hosts",
+    "franklinteixeira205.primeflex",
     "firsttris.vscode-jest-runner",
-    "waderyan.gitblame",
     "wenfangdu.snippet-generator",
     "xabikos.javascriptsnippets",
     "nidu.copy-json-path",
@@ -68,6 +69,7 @@
     "christian-kohler.path-intellisense",
     "thebearingedge.vscode-sql-lit",
     "ms-vscode-remote.remote-wsl",
-    "kgrzywocz.wsl-path"
+    "kgrzywocz.wsl-path",
+    "imgildev.vscode-angular-generator"
   ]
 }
