--- a/.vscode/launch-backup.jsonc
+++ b/.vscode/launch-backup.jsonc
@@ -7,10 +7,7 @@
       "request": "launch",
       "name": "Debug/Start Server",
       "program": "${workspaceFolder}/run.js",
-      "args": [
-        "port=4000",
-        "--ENVoverride=%7B%0A%20%20%20%20%22clientProjectName%22%3A%20%22mouse-electron-jiggler%22%0A%7D "
-      ],
+      "args": [],
       "runtimeArgs": [
         "--preserve-symlinks"
       ]
@@ -26,7 +23,7 @@
       "runtimeArgs": [
         "--serve",
         ".",
-        "--remote-debugging-port=3002"
+        "--remote-debugging-port=9881"
       ],
       "windows": {
         "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
