--- a/docs-config.jsonc
+++ b/docs-config.jsonc
@@ -2,13 +2,13 @@
   "site_name": "mouse-electron-jiggler",
   "externalDocs": {
     "mdfiles": [],
-    "projects": []
+    "projects": [],
   },
   "omitFilesPatters": [],
   "priorityOrder": [],
   "mapTitlesNames": {
-    "README.md": "Introduction"
+    "README.md": "Introduction",
   },
   "customCssPath": "custom.css",
-  "customJsPath": "custom.js"
+  "customJsPath": "custom.js",
 }
