--- a/tsconfig.isomorphic.json
+++ b/tsconfig.isomorphic.json
@@ -1,30 +1,28 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "declaration": true,
-    "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
+    "declaration": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "lib": [
+      "es2022",
+      "dom"
+    ],
     "module": "commonjs",
+    "moduleResolution": "node",
+    "outDir": "dist",
+    "rootDir": "./tmp-src",
     "skipLibCheck": true,
     "sourceMap": true,
     "target": "es2022",
     "typeRoots": [
       "node_modules/@types"
     ],
-    "lib": [
-      "es2022",
-      "dom"
-    ],
     "types": [
       "node"
-    ],
-    "rootDir": "./tmp-src",
-    "outDir": "dist"
+    ]
   },
-  "include": [
-    "tmp-src/**/*"
-  ],
   "exclude": [
     "preview",
     "projects",
@@ -40,5 +38,8 @@
     "src/**/*.spec.ts",
     "tmp-site-src",
     "tmp-tests-context"
+  ],
+  "include": [
+    "tmp-src/**/*"
   ]
 }
